feat: add field in login
