# api/nft/v1/register.pb.validate.go
@@ -1,0 +1,332 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: api/nft/v1/register.proto
+
+package v1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on ListRegisterNftRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *ListRegisterNftRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ListRegisterNftRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ListRegisterNftRequestMultiError, or nil if none found.
+func (m *ListRegisterNftRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ListRegisterNftRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if all {
+		switch v := interface{}(m.GetBaseListRequest()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, ListRegisterNftRequestValidationError{
+					field:  "BaseListRequest",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, ListRegisterNftRequestValidationError{
+					field:  "BaseListRequest",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetBaseListRequest()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ListRegisterNftRequestValidationError{
+				field:  "BaseListRequest",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	// no validation rules for Address
+
+	if len(errors) > 0 {
+		return ListRegisterNftRequestMultiError(errors)
+	}
+	return nil
+}
+
+// ListRegisterNftRequestMultiError is an error wrapping multiple validation
+// errors returned by ListRegisterNftRequest.ValidateAll() if the designated
+// constraints aren't met.
+type ListRegisterNftRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ListRegisterNftRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ListRegisterNftRequestMultiError) AllErrors() []error { return m }
+
+// ListRegisterNftRequestValidationError is the validation error returned by
+// ListRegisterNftRequest.Validate if the designated constraints aren't met.
+type ListRegisterNftRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ListRegisterNftRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ListRegisterNftRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ListRegisterNftRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ListRegisterNftRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ListRegisterNftRequestValidationError) ErrorName() string {
+	return "ListRegisterNftRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ListRegisterNftRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sListRegisterNftRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ListRegisterNftRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ListRegisterNftRequestValidationError{}
+
+// Validate checks the field values on ListRegisterNftResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *ListRegisterNftResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ListRegisterNftResponse with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ListRegisterNftResponseMultiError, or nil if none found.
+func (m *ListRegisterNftResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ListRegisterNftResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if all {
+		switch v := interface{}(m.GetBaseListResponse()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, ListRegisterNftResponseValidationError{
+					field:  "BaseListResponse",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, ListRegisterNftResponseValidationError{
+					field:  "BaseListResponse",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetBaseListResponse()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ListRegisterNftResponseValidationError{
+				field:  "BaseListResponse",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	for idx, item := range m.GetSummaries() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, ListRegisterNftResponseValidationError{
+						field:  fmt.Sprintf("Summaries[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, ListRegisterNftResponseValidationError{
+						field:  fmt.Sprintf("Summaries[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return ListRegisterNftResponseValidationError{
+					field:  fmt.Sprintf("Summaries[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return ListRegisterNftResponseMultiError(errors)
+	}
+	return nil
+}
+
+// ListRegisterNftResponseMultiError is an error wrapping multiple validation
+// errors returned by ListRegisterNftResponse.ValidateAll() if the designated
+// constraints aren't met.
+type ListRegisterNftResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ListRegisterNftResponseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ListRegisterNftResponseMultiError) AllErrors() []error { return m }
+
+// ListRegisterNftResponseValidationError is the validation error returned by
+// ListRegisterNftResponse.Validate if the designated constraints aren't met.
+type ListRegisterNftResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ListRegisterNftResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ListRegisterNftResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ListRegisterNftResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ListRegisterNftResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ListRegisterNftResponseValidationError) ErrorName() string {
+	return "ListRegisterNftResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ListRegisterNftResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sListRegisterNftResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ListRegisterNftResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ListRegisterNftResponseValidationError{}
